--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "express": "^4.19.2",
+    "google-auth-library": "^9.11.0",
     "google-spreadsheet": "^4.1.2",
     "pg": "^8.12.0"
   }
